--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,18 @@
     <meta charset="utf-8">
     <title>BriefManager</title>
     <base href="/">
-
+    <h:head />
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all">
+
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/omega/theme.css" />
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+    <link rel="stylesheet" type="text/css" href="/font-awesome.min.css" />
+    
 </head>
 
 <body>
