--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all">
-    
+    <script src="/node_modules/chart.js/dist/Chart.min.js"></script>
 </head>
 
 <body>
