--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>BriefManager</title>
-    <base href="/">
+    <base href=".">
     <h:head />
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-  
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
